# nogu

./: .gitignore  README.md  README_CN.md  config.py  main.py  requirements.txt  services.py  test.py
backend/: .gitignore  README.md  config.example.py  main.py  pyproject.toml  requirements.txt
backend/app/: analysis.py  database.py  definition.py  interaction.py  objects.py  services.py  sessions.py
backend/app/api/: __init__.py  init_api.py  users.py
backend/app/api/internal/: __init__.py  beatmaps.py  oauth.py  scores.py  stages.py  teams.py
backend/app/api/schemas/: __init__.py  beatmap.py  score.py  stage.py  team.py  user.py
backend/app/constants/: modes.py
backend/etc/: views.sql
backend/src/nogu/: config.example.py  main.py
backend/src/nogu-nekko/: main.py
backend/src/nogu-nekko/app/: database.py  entrypoint.py  objects.py
backend/src/nogu-nekko/app/api/: __init__.py  users.py
backend/src/nogu-nekko/app/api/osu/: __init__.py  (+5 more)
backend/src/nogu-nekko/app/constants/: exceptions.py
backend/src/nogu-nekko/app/models/: __init__.py  ast_condition.py  team.py  user.py
backend/src/nogu/app/: database.py  entrypoint.py  logging.py  objects.py  utils.py
backend/src/nogu/app/analysis/: __init__.py  osu.py
backend/src/nogu/app/api/: __init__.py  oauth.py  teams.py  users.py
backend/src/nogu/app/constants/: exceptions.py
backend/src/nogu/app/models/: ast_condition.py  combination.py  team.py  user.py
backend/tests/: conftest.py  main.py  mock.py
backend/tests/models/: test_team.py
backend/tests/models/osu/: test_beatmap.py  test_score.py
(+167 files in other folders)
